[workspace]
resolver = "2"
members = [
    "smoke",
    "ch02-first-app",
    "ch03-entities-components",
    "ch04-systems-queries",
    "ch05-resources",
    "ch06-schedules",
    "ch07-messages",
    "ch08-events-observers",
    "ch09-relationships",
    "ch10-states",
    "ch11-deep-ecs",
    "ch12-transforms",
    "ch13-cameras",
    "ch14-assets",
    "ch15-sprites",
    "ch16-text",
    "ch17-input",
    "ch18-time",
    "ch19-audio",
    "ch20-breakout",
]

[workspace.package]
edition = "2024"
publish = false

[workspace.dependencies]
bevy = "=0.18.1"

# Bevy 官方推荐的开发期配置：自身代码 O1、依赖 O3，加快迭代时的编译与运行
# ANCHOR: dev_profile
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
# ANCHOR_END: dev_profile
