[workspace]
resolver = "2"
members = [
    "smoke",
    "ch02-first-app",
    "ch03-entities-components",
    "ch04-systems-queries",
    "ch05-resources",
    "ch06-schedules",
    "ch07-messages",
    "ch08-events-observers",
    "ch09-relationships",
    "ch10-states",
    "ch11-deep-ecs",
    "ch12-transforms",
    "ch13-cameras",
    "ch14-assets",
    "ch15-sprites",
    "ch16-text",
    "ch17-input",
    "ch18-time",
    "ch19-audio",
    "ch20-breakout",
    "ch21-meshes",
    "ch22-lighting",
    "ch23-gltf",
    "ch24-materials",
    "ch25-picking",
    "ch26-quality",
    "ch27-dev-tools",
    "ch28-ui-layout",
]

[workspace.package]
edition = "2024"
publish = false

[workspace.dependencies]
bevy = "=0.19.0"

# Bevy 官方推荐的开发期配置：自身代码 O1、依赖 O3，加快迭代时的编译与运行。
# 依赖不生成调试信息：否则每个可执行文件都要背上整个依赖树的调试符号，
# 单个 .pdb 可达 GB 级，本 workspace 数百个 example 会把 target 撑到数百 GB
# ANCHOR: dev_profile
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
debug = false
# ANCHOR_END: dev_profile

# 编 wasm 网页 demo 专用：在 release 基础上死压体积。不依赖外部 wasm-opt，
# 靠 opt-level="z" + 全程 LTO + strip 去符号。只有 `--profile wasm-release` 时才生效，
# 不影响其它 crate 的常规构建。见 scripts/build_ch20_wasm.py。
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
